--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'org.litepal.android:core:1.5.0'
     compile 'com.android.support:support-v4:24.2.1'
+    compile 'com.jakewharton:butterknife:8.5.1'
 }
